--- a/src/gradient.html
+++ b/src/gradient.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="pussodoro.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sprintf/1.0.3/sprintf.min.js"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Lora:ital,wght@0,400..700;1,400..700&family=Ms+Madi&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <box style="margin-top:10%">
-        <brand>
-            Pussodoro ❤️‍🔥
+    
+    <brand class="item">
+        Pussoduro    
     </brand>
-    </box>
 
-    <box id="box" style="padding-top: 20px;">
+    <box id="box" style="padding-top: 20px;" class="item">
 
         <text id="topText">
             Starta timern!
@@ -32,15 +33,24 @@
         </div>
     </box>
 
-    <box style="visibility: hidden;" id="textBox">
-        <text id="text">
-            Text!
-        </text>
-    </box>
+    <bottom>
+        <h1>
+            Pussoduro
+        </h1>
+
+        <p>
+            Här beskriver vi Pomodoro och Pussodoro
+        </p>
+        
+        <p>
+            Gud vad jag älskar dig megamycket osv... tillägnat Jenna.
+        </p>
+
+        <p class ="signature">
+            Din Jojo
+        </p>
+    </bottom>
 
     <script src="script.js"></script>
-
-
-
 </body>
 </html>
