--- a/src/gradient.html
+++ b/src/gradient.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     
-    <brand class="item">
+    <brand class="item" style="margin-top: 10px">
         Pussoduro    
     </brand>
 
-    <box id="box" style="padding-top: 20px;" class="item">
+    <box id="box" class="item">
 
         <text id="topText">
             Starta timern!
@@ -32,6 +32,20 @@
             </button>
         </div>
     </box>
+
+    <div class="item" style="margin-top: 40px;">
+        <input type="time" id="studyTime" placeholder="Enter a number" value="00:45" style="margin-right: min(10%, 100px);accent-color: white;">
+        <input type="time" id="funTime" placeholder="Enter a number" value="00:15">
+        <div class="label">
+            <label style="padding-right:min(22%, 230px);">
+                Plugga
+            </label>
+            <label>
+                Ha kul
+            </label>
+        </div>
+    </div>
+
 
     <bottom>
         <h1>
@@ -49,7 +63,7 @@
         <p class ="signature">
             Din Jojo
         </p>
-    </bottom>
+    <!-- Button to send the input to JavaScript -->
 
     <script src="script.js"></script>
 </body>
