write bottom text

--- a/src/gradient.html
+++ b/src/gradient.html
@@ -14,7 +14,7 @@
 <body>
     
     <brand class="item" style="margin-top: 10px">
-        Pussoduro    
+        Pussodoro    
     </brand>
 
     <box id="box" class="item">
@@ -53,7 +53,10 @@
         </h1>
 
         <p>
-            Här beskriver vi Pomodoro och Pussodoro
+            Pomodoro-tekniken är en metod för att hantera tid och öka produktiviteten genom att dela upp arbetet i korta, fokuserade intervaller, kallade pomodoros, som varvas med korta pauser. Francesco Cirillo uppfann som ung student, använde en tomatformad kökstimer för att mäta tiden. Metoden beskrivs oftast som 25 minuter intensivt arbete följt av 5 minuter rast. Ibland kan man dock ta en längre rast (25-30min). Personligen föredrar jag dock att köra 45 minuter arbete och 15 minuter rast. Eftersom jag som person kommer in i ett djupare flyt och för roligare saker gjorda på rasten som promenader eller... Annat ;)
+        </p>
+        <p>
+            För det här är ingen pomodoro-timer! Det är en <i>PUSS</i>-odoro timer. Har du någonsin varit på en plugg-dejt eller försökt få något gjort bredvid en partner? Då vet du nog hur svårt det kan vara att fokusera när någon kommer och pussar på dig och hur oemotståndlig din partner kan vara hopkurad in soffa alldeles fokuserad och duktig. Jag hoppas att den här hemsidan kan hjälpa några stackars par där ute att hålla sig från varandra. Samtidigt som jag hoppas att den kan i korta intensiva intervall kan uppmuntra till lite närhet  och längtan i par.
         </p>
         
         <p>
@@ -63,7 +66,6 @@
         <p class ="signature">
             Din Jojo
         </p>
-    <!-- Button to send the input to JavaScript -->
 
     <script src="script.js"></script>
 </body>
