--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gradient Background</title>
-    <link rel="stylesheet" href="pussodoro.css">
+    <link rel="stylesheet" href="./src/pussodoro.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sprintf/1.0.3/sprintf.min.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -67,6 +67,6 @@
             Din Jojo
         </p>
 
-    <script src="script.js"></script>
+    <script src="./src/script.js"></script>
 </body>
 </html>
