--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gradient Background</title>
+    <title id="title">Pussodoro</title>
+    <link id="favicon" rel="icon" type="image/x-icon" href="./img/kiss.png">
     <link rel="stylesheet" href="./src/pussodoro.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sprintf/1.0.3/sprintf.min.js"></script>
 
