--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
         </div>
     </box>
 
-    <div class="item" style="margin-top: 40px;">
-        <input type="time" id="studyTime" placeholder="Enter a number" value="00:45" style="margin-right: min(10%, 100px);accent-color: white;">
-        <input type="time" id="funTime" placeholder="Enter a number" value="00:15">
+    <div class="item">
         <div class="label">
             <label style="padding-right:min(22%, 230px);">
                 Plugga
@@ -45,6 +43,8 @@
                 Ha kul
             </label>
         </div>
+        <input type="time" id="studyTime" placeholder="Enter a number" value="00:45" style="margin-right: min(10%, 100px)">
+        <input type="time" id="funTime" placeholder="Enter a number" value="00:15">
     </div>
 
 
@@ -67,6 +67,8 @@
         <p class ="signature">
             Din Jojo
         </p>
+    
+    </bottom>
 
     <script src="./src/script.js"></script>
 </body>
