--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </timer>
 
         <div id="buttonContainer">
-            <button onclick="start()" class="button-1" id="button">
+            <button onclick="start()" class="button" id="button">
                 Start
             </button>
         </div>
