Fix logic errors from input switch

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             <label class="grid-item">Ha kul</label>
             <div class="grid-item">
                 <div class="inputTime">
-                    <input type="text" id="studyHour" value="25" inputmode="numeric">:<input type="text" id="studyMinute" value="00" inputmode="numeric">
+                    <input type="text" id="studyMinutes" value="25" inputmode="numeric">:<input type="text" id="studySeconds" value="00" inputmode="numeric">
                 </div>
             </div>
             <div class="grid-item">
                 <div class="inputTime">
-                    <input type="text" id="funHour" value="05" inputmode="numeric">:<input type="text" id="funMinute" value="00" inputmode="numeric">
+                    <input type="text" id="funMinutes" value="05" inputmode="numeric">:<input type="text" id="funSeconds" value="00" inputmode="numeric">
                 </div>
             </div>
         </timeSelect>
